--- a/webfrontend/css/estilo.css
+++ b/webfrontend/css/estilo.css
@@ -1,5 +1,3 @@
-
-
 @font-face{
     font-family:rblack;
     src: url(../tipografia/robotoblack.ttf);
@@ -13,16 +11,15 @@
     src: url(../tipografia/robotolight.ttf);
 }
 
-
 body{
     background:#AED581;
     
 }
 
 
-h1 {
+h1.pres {
     color: #000000;
-    font-size: 10em;
+    font-size: 8em;
     font-family: 'rblack', sans-serif;
 }
 
@@ -66,28 +63,27 @@ p {
     text-align: left;
 }
 
-
-/*Boton de inicio*/
-.btn{
-    margin-top: 50px;
-    padding: 20px 100px 20px 100px;
-    /*min-width: 180px;*/
-    border-radius: 10px;
-    display: inline-block;
+/*Menu Login y Carrito*/
+.regitro{
+background-color: #689F38;
+}
+.regitro>.registro-izquierda{
+text-align: right; 
 }
 
-.btn-avino{
-    background-color: #6A1B9A;
-    color: #FFFFFF;
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
+.regitro>.registro-izquierda>a{
+text-align: center;
+font-size: 0.8em;
+font-family: 'rmeduim', sans-serif;
+display: inline-block;
+margin-left: 10px;
+padding: 0 10px 0 0;
 }
-.btn-avino:hover{
-    background-color: #6A1B9A;
-    color: #000000;
-    box-shadow: 0 2.5px 5px 0 rgba(0, 0, 0, 0.5);
-     
-}
-    
+
+.regitro>.registro-izquierda>a>span{
+display: inline-block;
+vertical-align: middle;
+}    
 
 /*barra de navegacion*/
 .navbar {
@@ -110,17 +106,7 @@ p {
 }
 .nav-link:hover{
     color: #7E57C2;
-    font-size: 1.5em;
-    margin: -5px;
 }
-
-.icono{
-    
-    display: inline-block;
-    vertical-align: middle;
-  
-}
-
 
 .navbar-toggler{
     font-size: 1em;
@@ -136,12 +122,29 @@ p {
 
 #logo   {
     margin-left: 45%;
- }
+}
+
+/*Boton de inicio*/
+.btn-one{
+    margin-top: 50px;
+    padding: 30px 100px 30px 100px;
+    border-radius: 10px;
+    display: inline-block;
+}
+
+.btn-avino{
+    background-color: #6A1B9A;
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
+}
+.btn-avino:hover{
+    background-color: #6A1B9A;
+    box-shadow: 0 2.5px 5px 0 rgba(0, 0, 0, 0.5);
+     
+}
 
 .inicio{
     background-size: cover;
-    padding-top: 200px;
-    color: #ffffff;
+    padding-top: 100px;
 }
 
 .conten-center {
@@ -158,9 +161,8 @@ p {
     color: #000000;
     padding-left: 20px;
     padding-right: 20px;
-    
-
-
+    min-height: 650px;/*lo agreco porque queda corto nuestros vinos*/
+ 
 }
 
 .card {
@@ -173,7 +175,7 @@ p {
 
 #listadeeventos{
     padding: 50px 50px 0px 100px;
-     
+    
 }
 
 #fotocopa{
@@ -184,7 +186,7 @@ p {
     color: #000000;
     font-family: sans-serif;
     font-size: 1.2em;
-        
+    
 }
 
 .form{
@@ -203,9 +205,9 @@ p {
 /*Acomoda la lista de eventos en su ancho maximo */
 
 @media only screen and (max-width: 600px) {
-  #listadeeventos {
-    padding: 50px 50px 0px 0px;
-  }
+    #listadeeventos {
+        padding: 50px 50px 0px 0px;
+    }
     .titpaginasvarias{
         font-size: 2.5em;
     }
@@ -213,13 +215,10 @@ p {
 /*Pantalla larga*/
 @media only screen and (min-width: 991px) {
     
-   .nav-link{
-    font-size: 1.3em;
-    padding: 0px;
-    margin-right: 10px;
-}
-    .icono-pant-ex{
-        display: none;
+    .nav-link{
+        font-size: 1.3em;
+        padding: 0px;
+        margin-right: 10px;
     }
     
     .form{
@@ -231,115 +230,86 @@ p {
         height:400px;
         width: 600px;
     }
-
+    
 }
 
 
 /*Menu Hamburguesa dinámico*/
 
 .hamburger {
-  padding: 0px;
-  display: inline-block;
-  cursor: pointer;
-  transition-property: opacity;
-  transition-duration: 0.15s;
-  transition-timing-function: linear;
-  font: inherit;
-  color: inherit;
-  text-transform: none;
-  background-color: transparent;
-  border: 0;
-  margin: 0;
-  overflow: visible; }
-  .hamburger:hover {
-    opacity: 0.7; }
-  .hamburger.is-active:hover {
-    opacity: 0.7; }
-  .hamburger.is-active .hamburger-inner,
-  .hamburger.is-active .hamburger-inner::before,
-  .hamburger.is-active .hamburger-inner::after {
-    background-color: #000; }
-
-.hamburger-box {
-  width: 40px;
-  height: 24px;
-  display: inline-block;
-  position: relative; }
-
-.hamburger-inner {
-  display: block;
-  top: 50%;
-  margin-top: -2px; }
-  .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-    width: 40px;
-    height: 4px;
-    background-color: #000;
-    border-radius: 4px;
-    position: absolute;
-    transition-property: transform;
+    padding: 0px;
+    display: inline-block;
+    cursor: pointer;
+    transition-property: opacity;
     transition-duration: 0.15s;
-    transition-timing-function: ease; }
-  .hamburger-inner::before, .hamburger-inner::after {
-    content: "";
-    display: block; }
-  .hamburger-inner::before {
-    top: -10px; }
-  .hamburger-inner::after {
-    bottom: -10px; }
-
+    transition-timing-function: linear;
+    font: inherit;
+    color: inherit;
+    text-transform: none;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+    overflow: visible; }
+.hamburger:hover {
+    opacity: 0.7; }
+.hamburger.is-active:hover {
+    opacity: 0.7; }
+.hamburger.is-active .hamburger-inner,
+.hamburger.is-active .hamburger-inner::before,
+.hamburger.is-active .hamburger-inner::after {
+background-color: #000; }
+.hamburger-box {
+width: 40px;
+height: 24px;
+display: inline-block;
+position: relative; }
+                    
+.hamburger-inner {
+display: block;
+top: 50%;
+margin-top: -2px; }
+.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+width: 40px;
+height: 4px;
+background-color: #000;
+border-radius: 4px;
+position: absolute;
+transition-property: transform;
+transition-duration: 0.15s;
+transition-timing-function: ease; }
+.hamburger-inner::before, .hamburger-inner::after {
+content: "";
+display: block; }
+.hamburger-inner::before {
+top: -10px; }
+.hamburger-inner::after {
+bottom: -10px; }
 .hamburger--spin .hamburger-inner {
-  transition-duration: 0.22s;
-  transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19); }
-  .hamburger--spin .hamburger-inner::before {
-    transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in; }
-  .hamburger--spin .hamburger-inner::after {
-    transition: bottom 0.1s 0.25s ease-in, transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19); }
-
+transition-duration: 0.22s;
+transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19); }
+.hamburger--spin .hamburger-inner::before {
+transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in; }
+.hamburger--spin .hamburger-inner::after {
+transition: bottom 0.1s 0.25s ease-in, transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19); }
 .hamburger--spin.is-active .hamburger-inner {
-  transform: rotate(225deg);
-  transition-delay: 0.12s;
-  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-  .hamburger--spin.is-active .hamburger-inner::before {
-    top: 0;
-    opacity: 0;
-    transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out; }
-  .hamburger--spin.is-active .hamburger-inner::after {
-    bottom: 0;
-    transform: rotate(-90deg);
-    transition: bottom 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
+transform: rotate(225deg);
+transition-delay: 0.12s;
+transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
+.hamburger--spin.is-active .hamburger-inner::before {
+top: 0;
+opacity: 0;
+transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out; }
+.hamburger--spin.is-active .hamburger-inner::after {
+bottom: 0;
+transform: rotate(-90deg);
+transition: bottom 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
 
-
-/*jugando con grid* en vinos2*/
-
-.contenedor{
-    display: grid;
-    grid-template-columns: auto 1fr; 
-    /*en px en %
-    1fr 1fr trata de ocupar todo el ancho*/
-    /*o usar repeat(2, 1fr)*/
-    grid-template-rows: ;
-    /*grid-template-rows: minmax(20px auto)*/
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
-    background: #689F38
-    /*
-    justify-items: center;
-    */
-    
-}
-
-.contenedor .contenedor-producto{
-    margin-left: 10px;
-}
-
-.contenedor div .comprar{
-    padding: 10px 0 0 0;
-    align-self:center;
-}
-
+/*FOOTER*/
 footer{
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
-    min-height: 50px;
-    font-size: 1.2em;
-    font-family: 'rmeduim', sans-serif;
-    background: #689F38;
+box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
+min-height: 50px;
+font-size: 1.2em;
+font-family: 'rmeduim', sans-serif;
+background: #689F38;
 }
+
